--- a/index.html
+++ b/index.html
@@ -33,14 +33,17 @@
               GERAIS que absolutamente todas as áreas vão requisitar, então você PRECISA aprender…
             </p>
               <h2>Versionamento de código com GIT/GitHub</h2>
+              <p>Git é um repositório usado para rastrear as mudanças feitas no código. O Github, por outro lado, é um serviço de hospedagem.</p>
               <p>Saber fazer o controle básico de código é conhecimento obrigatório hoje 
                 em dia, pois até pra compartilhar códigos com seus amigos, você vai ser 
                 solicitado "poe no github e me passa o link".</p>
               <h2>Conhecimentos básicos de terminal</h2>
+              <p>Tela preta na qual você digita comandos para dar instruções para um computador e visualizar informações dessa máquina.</p>
               <p>Mesmo que você use Windows, alguns conhecimentos básico de terminal/prompt são essenciais, pois hoje em dia, independente da linguagem 
                 que você escolher, uma hora ou outra vai ser necessário fazer uso do terminal/prompt, então o conhecimento básico dos principais comandos já é 
                 mais do que o suficiente.</p>
               <h2>Nomenclatura básica de programação</h2>
+              <p>Termos técnicos de programação : código binário, código de máquina, bug, frameworks, queries, SSL, bit, byte, shell, console.</p>
               <p>Coisas como API, padrão de projeto, encoding, licença, estrutura de dados, 
                 algoritmo, dentre outros, são nomenclaturas que você precisa no mínimo 
                 saber do que se trata. Não precisa saber tudo e todas as variações, mas 
@@ -55,6 +58,8 @@
                 brincar em qualquer área. Vamos aprender agora 
                 desde o início, qual é o melhor caminho para um programador Frontend que está começando agora.</p>
                 <h2>HTML e CSS</h2>
+                <p>HTML (Linguagem de Marcação de Hipertexto) é o código que você usa para estruturar uma página web e seu conteúdo.</p>
+                <p>CSS (Folha de Estilo em Cascata) é uma folha de estilo feita de camadas, serve para definir a aparência do HTML.</p>
                 <p>Hoje em dia a gente ainda chama de HTML5 e CSS3, mas o fato é que 
                   esses números de versões já são o padrão mundial, então podemos 
                   apenas chamar de HTML e CSS e pronto.</p>
@@ -75,6 +80,7 @@
                   variações disso. Depois vai em Imagens e pronto, você terá 
                   uma centena de sites e páginas pra praticar recriando elas.</p>
                   <h2>JavaScript</h2>
+                  <p>Javascript é uma linguagem de programação de alto nível criada, a princípio, para ser executada em navegadores e manipular comportamentos de páginas web.</p>
                   <p>Essa é a linguagem-mãe de quase todas as tecnologias que você vai manusear quando o assunto é frontend, então eu recomendo dar uma atenção 
                     especial nos estudos aqui.
                     O que você deve focar mais atenção pra aprender bem?</p>
@@ -90,7 +96,9 @@
                         Controle de Eventos, Strict, DNS, Hoisting, etc.</p>
              <h2>Package Managers</h2> 
              <p>NPM</p> 
+             <p>O NPM, que significa Node Package Manager, é um poderoso gerenciador de pacotes que faz parte do Node.js . Executa Javascript no lado do servidor de hospedagem, nesse caso no back end.</p>
              <p>Yarn</p> 
+             <p>O Yarn é um gerenciador de pacotes para aplicar comandos prontos ao código de uma aplicação.</p>
              <p>Agora você vai começar a sentir o poder do Javascript, então o ideal é já 
               aprender todas as principais funções e comandos dos dois maiores gerenciadores de pacotes para Javascript… NPM e YARN. Os dois usam os 
               mesmos repositórios, o mais usado é o NPM, mas o Yarn tem recursos mais 
@@ -98,20 +106,26 @@
               seja feliz.</p> 
               <h2>Pré-processador de CSS</h2>
               <p>Sass</p> 
+              <p>SASS, Folhas de Estilo com Sintaxe Espetacular. A mesma lógica do CSS, mas de uma maneira mais organizada, intuitiva e com trechos de código reutilizável.</p>
               <p>As 3 maiores opções do mercado hoje em dia são SASS, LESS e POSTCSS, 
                 sendo a última não considerada um pré-processador, mas sim um 
                 pós-processador, não importa, depois você estuda sobre essa diferença.
                 Apesar de ainda existir mercado pro LESS, o mundo hoje usa majoritariamente o SASS, então essa é minha recomendação</p>    
                 <h2>Framework CSS</h2>
                 <p>Bootstrap</p>
+                <p>Bootstrap é um framework front end que fornece estruturas de CSS para a criação de sites e aplicações responsivos de forma rápida e simples.</p>
                 <p>Existem 2 grandes no mercado, Bootstrap e Materialize, sendo o primeiro 
                   disparadamente maior. Então pra Framework CSS hoje, minha 
-                  recomendação é Bootstrap. Aprenda e pratique muito, pois vai ficar viciado em usar ele</p>
+                  recomendação é Bootstrap. Aprenda e pratique muito, pois vai ficar viciado em usar ele</p>
                 <h2>Linters, Bundlers e Taskers</h2>
                 <p>ESLint</p>
+                <p>ESLint ajuda a encontrar e corrigir problemas em seu código javascript.</p>
                 <p>Prettier</p>
+                <p>Prettier é um formatador de códigos que organiza diversos tipos de arquivos.</p>
                 <p>Gulp</p>
+                <p>Gulp é um executor de tarefas que usa Node.js .</p>
                 <p>Webpack</p>
+                <p>Webpack é um empacotador de módulos/códigos.</p>
                 <p>Você vai aprender agora sobre ESLint e Prettier, ferramentas que vão te 
                   ajudar a escrever um código mais limpo e organizado. Logo em seguida, 
                   estude duas ferramentas excepcionais, Webpack e Gulp. Com elas, você vai 
@@ -119,15 +133,18 @@
                   rápida</p>
                   <h2>Frameworks</h2>
                   <p>React</p>
+                  <p>React é uma biblioteca javascript utilizada no desenvolvimento de interfaces de usuários.</p>
                   <p>Se for aprender React, 
                     não esqueça de aprender 
                     Hooks e Redux, confie 
                     em mim.</p>
                   <p>Vue</p>
+                  <p>Vue.js é um framework javascript open source bastante conhecido para sua reatividade.</p>
                   <p>Se for aprender Vue, 
                     também não esqueçe do 
                     VueX.</p>
                   <p>Angular</p>
+                  <p>Angular é um framework javascript que simplifica a construção, e usa Typescript ao invés do javascript.</p>
                   <p>No caso do Angular, a 
                     recomendação pra aprofundamento vai para a 
                     ferramenta RxJS</p>
@@ -144,6 +161,8 @@
                       ele bem mais fácil de aprender.</p>
                       <h2>CSS in JS</h2>
                       <p>Styled Components</p>
+                      <p>Styled Components é uma biblioteca feita para React e React Native</p>
+                      <p>Ela utiliza uma mistura de CSS e Javascript usando uma técnica chamada CSS-in-JS . Quando vamos estilizar, o CSS é escrito entre crases.</p>
                       <p>Essa ferramenta é muito 
                         conhecida no mundo 
                         React, mas saiba que ela 
@@ -157,9 +176,14 @@
                         <p>Agora você já tem um conhecimento muito bom no Frontend, tá na hora de 
                           avançar um pouco isso, então vá estudar sobre Testing.</p>
                         <p>Jest</p>
+                        <p>Jest é um framework de teste em javascript, corrige códigos.</p>
                         <p>Cypress</p>
+                        <p>Cypress é um framework de teste de código aberto e de fácil configuração.</p>
                         <p>Enzyme</p>
+                        <p>Enzyme é um utilitário de teste javascript para o React que facilita o teste de saída dos componentes React.</p>
                         <h2>Web API e PWA</h2>
+                        <p>Web API é uma interface de programação de aplicações (API) tanto para um servidor quanto um navegador. Usa para recuperar o valor necessitado num banco de dados de um site.</p>
+                        <p>PWA (Progressive Web App) transforma os navegadores (páginas web) em verdadeiras plataformas de apps. Acessa recursos do dispositivo para aprimorar experiencia no app.</p>
                         <p>O próximo passo é aprender as principais WebAPIs, como por exemplo:</p>
                         <p>Storage</p>
                         <p>Location</p>
@@ -169,7 +193,7 @@
                         <p>E claro, todo o básico sobre PWA e suas aplicações práticas.
                           Pra não deixar de citar, você pode aprender TypeScript também, pra dar 
                           um upgrade nos seus conhecimentos de Javascript.</p>
-
+                          <p>Typescript é uma linguagem de programação de código aberto desenvolvida pela Microsoft. É um super conjunto sintático estrito em javascript e adiciona tipagem estática opcional a linguagem.</p>
 
 
           <br>
